@@ -26,24 +26,17 @@ import java.io.InputStream;
 import java.net.Authenticator;
 import java.net.CookieHandler;
 import java.net.CookieManager;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import net.pms.PMS;
-import net.pms.dlna.DLNAResource;
 import net.pms.formats.Format;
-import net.pms.media.MediaInfo;
-import net.pms.renderers.Renderer;
 import net.pms.util.PropertiesUtil;
 import net.pms.util.StringUtil;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-/**
- * Implements any item that can be transferred through the HTTP pipes.
- * In the PMS case, this item represents media files.
- * @see DLNAResource
- */
 public abstract class HTTPResource {
 	private static final Logger LOGGER = LoggerFactory.getLogger(HTTPResource.class);
 	public static final String UNKNOWN_VIDEO_TYPEMIME = "video/mpeg";
@@ -92,6 +85,7 @@ public abstract class HTTPResource {
 	public static final String FLV_TYPEMIME = "video/x-flv";
 	public static final String GIF_TYPEMIME = "image/gif";
 	public static final String HLS_TYPEMIME = "application/x-mpegURL";
+	public static final String HLS_APPLE_TYPEMIME = "application/vnd.apple.mpegURL";
 	public static final String JPEG_TYPEMIME = "image/jpeg";
 	public static final String JSON_TYPEMIME = "application/json";
 	public static final String M4V_TYPEMIME = "video/x-m4v";
@@ -123,10 +117,10 @@ public abstract class HTTPResource {
 	 * @param fileName TODO Absolute or relative file path.
 	 * @return If found, an InputStream associated with the fileName. null otherwise.
 	 */
-	protected InputStream getResourceInputStream(String fileName) {
+	public static InputStream getResourceInputStream(String fileName) {
 		fileName = "/resources/" + fileName;
 		fileName = fileName.replace("//", "/");
-		ClassLoader cll = this.getClass().getClassLoader();
+		ClassLoader cll = HTTPResource.class.getClassLoader();
 		InputStream is = cll.getResourceAsStream(fileName.substring(1));
 
 		while (is == null && cll.getParent() != null) {
@@ -162,7 +156,10 @@ public abstract class HTTPResource {
 	 * @see #downloadAndSendBinary(String)
 	 */
 	public static InputStream downloadAndSend(String u, boolean saveOnDisk) throws IOException {
-		URL url = new URL(u);
+		if (u == null) {
+			return null;
+		}
+		URL url = URI.create(u).toURL();
 		File f = null;
 
 		if (saveOnDisk) {
@@ -207,7 +204,10 @@ public abstract class HTTPResource {
 	 * @throws IOException
 	 */
 	protected static byte[] downloadAndSendBinary(String u, boolean saveOnDisk, File f) throws IOException {
-		URL url = new URL(u);
+		if (u == null) {
+			return new byte[0];
+		}
+		URL url = URI.create(u).toURL();
 
 		// The URL may contain user authentication information
 		Authenticator.setDefault(new HTTPResourceAuthenticator());
@@ -252,152 +252,4 @@ public abstract class HTTPResource {
 		return bytes.toByteArray();
 	}
 
-	/**
-	 * Returns the supplied MIME type customized for the supplied media renderer according to the renderer's aliasing rules.
-	 * @param renderer media renderer to customize the MIME type for.
-	 * @param resource the resource
-	 * @return The MIME type
-	 */
-	public static String getRendererMimeType(Renderer renderer, DLNAResource resource) {
-		return renderer.getMimeType(resource);
-	}
-
-	public static int getDLNALocalesCount() {
-		return 3;
-	}
-
-	public static final String getMpegPsOrgPN(int index) {
-		if (index == 1 || index == 2) {
-			return "MPEG_PS_NTSC";
-		}
-
-		return "MPEG_PS_PAL";
-	}
-
-	public static final String getMpegTsMpeg2OrgPN(int index, MediaInfo media, Renderer renderer, boolean isStreaming) {
-		String orgPN = "MPEG_TS_";
-		if (media != null && media.isHDVideo()) {
-			orgPN += "HD";
-		} else {
-			orgPN += "SD";
-		}
-
-		orgPN += (
-			switch (index) {
-				case 1 -> "_NA";
-				case 2 -> "_JP";
-				default -> "_EU";
-			}
-		);
-
-		if (!isStreaming) {
-			orgPN += "_ISO";
-		}
-
-		return orgPN;
-	}
-
-	public static final String getMpegTsH264OrgPN(int index, MediaInfo media, Renderer renderer, boolean isStreaming) {
-		String orgPN = "AVC_TS";
-
-		orgPN += (
-			switch (index) {
-				case 1 -> "_NA";
-				case 2 -> "_JP";
-				default -> "_EU";
-			}
-		);
-
-		if (!isStreaming) {
-			orgPN += "_ISO";
-		}
-
-		return orgPN;
-	}
-
-	public static final String getMkvH264OrgPN(int index, MediaInfo media, Renderer renderer, boolean isStreaming) {
-		String orgPN = "AVC_MKV";
-
-		if (media == null || (media.getH264Profile() != null && media.getH264Profile().contains("high"))) {
-			orgPN += "_HP";
-		} else {
-			orgPN += "_MP";
-		}
-
-		orgPN += "_HD";
-
-		if (media != null && media.getFirstAudioTrack() != null) {
-			if (
-				(
-					isStreaming &&
-					media.getFirstAudioTrack().isAACLC()
-				) || (
-					!isStreaming &&
-					renderer.isTranscodeToAAC()
-				)
-			) {
-				orgPN += "_AAC_MULT5";
-			} else if (
-				(
-					isStreaming &&
-					media.getFirstAudioTrack().isAC3()
-				) || (
-					!isStreaming &&
-					renderer.isTranscodeToAC3()
-				)
-			) {
-				orgPN += "_AC3";
-			} else if (
-				isStreaming &&
-				media.getFirstAudioTrack().isDTS()
-			) {
-				orgPN += "_DTS";
-			} else if (
-				isStreaming &&
-				media.getFirstAudioTrack().isEAC3()
-			) {
-				orgPN += "_EAC3";
-			} else if (
-				isStreaming &&
-				media.getFirstAudioTrack().isHEAAC()
-			) {
-				orgPN += "_HEAAC_L4";
-			}
-		}
-
-		return orgPN;
-	}
-
-	public static final String getWmvOrgPN(MediaInfo media, Renderer renderer, boolean isStreaming) {
-		String orgPN = "WMV";
-		if (media != null && media.isHDVideo()) {
-			orgPN += "HIGH";
-		} else {
-			orgPN += "MED";
-		}
-
-		if (media != null && media.getFirstAudioTrack() != null) {
-			if (
-				(
-					isStreaming &&
-					media.getFirstAudioTrack().isWMA()
-				) || (
-					!isStreaming &&
-					renderer.isTranscodeToWMV()
-				)
-			) {
-				orgPN += "_FULL";
-			} else if (
-				isStreaming &&
-				(
-					media.getFirstAudioTrack().isWMAPro() ||
-					media.getFirstAudioTrack().isWMA10()
-				)
-			) {
-				orgPN += "_PRO";
-			}
-		}
-
-		return orgPN;
-	}
 }
